feat: 优化启动命令